--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "client": "npm start --prefix ../client",
-    "dev-full": "concurrently \"npm run dev\" \"npm run client\"",
+    "dev-full": "concurrently \"npm run dev\" \"npm run client\""
   },
   "engines": {
     "node": "18.x"
