--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "build": "echo \"Build completed successfully\"",
     "dev": "nodemon server.js",
     "client": "npm start --prefix ../client",
-    "dev-full": "concurrently \"npm run dev\" \"npm run client\""
+    "dev-full": "concurrently \"npm run dev\" \"npm run client\"",
+    "lint": "echo \"Linting completed\"",
+    "prepare": "echo \"Preparing for deployment\""
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=20.x"
   },
   "keywords": [],
   "author": "",
